--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-  "name": "suhail-md@1.3.4",
+  "name": "𝐂𝚫𝚻 𝐒𝚸𝐘@1.3.4",
   "description": "I am Suhail-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/SuhailTechInfo",
-  "logo": "https://github.com/SuhailTechInfo/Suhail-Md/blob/main/lib/assets/suhail.jpg?raw=true",
+  "logo": "https://github.com/mammu1030/Suhail-Md/blob/main/assets/mammu1030.jpg?raw=true",
   "keywords": ["whatsappbot", "suhailMd", "suhail Md bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
-  "success_url": "/suhail/",
+  "success_url": "/𝛭𝑈𝛨𝛥𝛭𝛭𝛯𝐷/",
   "app_url": "/qr/",
   
   "env": {
     "OWNER_NAME": {
       "description": "Name for Bot Owner",    
-      "value": "Suhail Ser",
+      "value": "𝛭𝑈𝛨𝛥𝛭𝛭𝛯𝐷",
       "required" :true
     },   
      
@@ -27,7 +27,7 @@
     "BOT_NAME": {
       "description": " NAME FOR BOT",
       "required" :false,    
-      "value": "sᴜʜᴀɪʟ-ᴍᴅ"
+      "value": "𝐂𝚫𝚻 𝐒𝚸𝐘"
     }, 
     "TZ": {
       "description": "Put TIME_ZONE according to your location",
@@ -95,7 +95,7 @@
     },
     "OWNER_NUMBER": {
       "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-      "value": "923184474176"
+      "value": "917034167123"
     },
     "SESSION_ID": {
       "description": "put your SESSION_ID here.",
@@ -119,16 +119,16 @@
     },
     "MODE": {
       "description": "Worktype of your bot. Use public or private, if it is private then only bot number can use it. If public then everyone can use it.",
-      "value": "private"
+      "value": "public"
     },
     "PACK_NAME": {
       "description": "Put Sticker Pack_Name.",
-      "value": "Suhail Md",
+      "value": "𝐂𝚫𝚻 𝐒𝚸𝐘",
       "required": false 
     },
     "PACK_AUTHER": {
       "description": "Put Sticker Author_Name.",
-      "value": "",
+      "value": "𝛭𝑈𝛨𝛥𝛭𝛭𝛯𝐷",
       "required": false 
     }
   }, 
